fix: Remove the test data, improve the contrast of the modal window

--- a/src/app/styles/style.sass
+++ b/src/app/styles/style.sass
@@ -122,7 +122,7 @@ body
   top: 0
 
 dialog[open]::backdrop
-  background-color: rgb(0 0 0 / 35%)
+  background-color: rgb(255 255 255 / 5%)
   backdrop-filter: blur(5px)
 
 .no-scroll
